# pkta

./: .gitignore
backend/: .env  main.py  pyproject.toml
backend/core/: config.py  database.py  intent_detection.py  llm_utils.py  mcp_client.py  policy_pipeline.py
backend/faiss_hr_policy_index/: index.faiss  index.pkl
backend/mcp/: mcp_client.py  mcp_server.py  mod.py
backend/mcp/data/: sample.parquet
backend/mcp/utils/: file_reader.py
backend/models/: hr_models.py
backend/routes/: hr_assistant.py  items.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  Layout.tsx
frontend/styles/: ChatInterface.module.css  Layout.module.css
